--- a/task_02/index.html
+++ b/task_02/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="css/theme.css">
 
     <!-- jQuery -->
-    <script defer src="vendor/jquery/jquery-3.6.0.js"></script>
+    <script defer src="vendor/jquery/jquery-3.5.1.min.js"></script>
 
     <!-- Bootstrap JavaScript -->
     <script defer src="js/bootstrap.min.js"></script>
