--- a/task_02/index.html
+++ b/task_02/index.html
@@ -9,16 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Bootstrap theme -->
-    <link rel="stylesheet" href="css/bootstrap-theme.css">
+    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
 
     <!-- Main theme -->
     <link rel="stylesheet" href="css/theme.css">
 
     <!-- jQuery -->
-    <script defer src="vendor/jquery/jquery-3.6.0.js"></script>
+    <script defer src="vendor/jquery/jquery-3.5.1.min.js"></script>
 
     <!-- Bootstrap JavaScript -->
     <script defer src="js/bootstrap.min.js"></script>
